--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@pinia/nuxt": "^0.10.1",
     "nuxt": "^3.16.0",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue3-toastify": "^0.2.8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.14"
   }
 }
